--- a/Vegetable.html
+++ b/Vegetable.html
@@ -246,7 +246,7 @@
          <h1 class="header-title">Vegetables</h1>
          <div class="media">
             <div class="mediapic">
-               <img src="C:\Users\Administrator\Downloads\fb.png" alt="fb" class="fb" />
+               <img src="https://github.com/Gxuanh/Gxuanh.github.io/blob/main/fb.png?raw=true" alt="fb" class="fb" />
                <img src="C:\Users\Administrator\Downloads\ig.png" alt="ig" class="ig" />
             </div>
             <h2 class="vertical">|</h2>
