--- a/Vegetable.html
+++ b/Vegetable.html
@@ -247,7 +247,7 @@
          <div class="media">
             <div class="mediapic">
                <img src="https://github.com/Gxuanh/Gxuanh.github.io/blob/main/fb.png?raw=true" alt="fb" class="fb" />
-               <img src="C:\Users\Administrator\Downloads\ig.png" alt="ig" class="ig" />
+               <img src="https://github.com/Gxuanh/Gxuanh.github.io/blob/main/ig.png?raw=true" alt="ig" class="ig" />
             </div>
             <h2 class="vertical">|</h2>
             <h5 class="login">LOGIN</h5>
