--- a/Vegetable.html
+++ b/Vegetable.html
@@ -274,7 +274,7 @@
          </ul>
       </nav>
       <div class="picture">
-         <img src="C:\Users\Administrator\Downloads\img_main_pumpkin.png" alt="picture" />
+         <img src="https://github.com/Gxuanh/Gxuanh.github.io/blob/main/img_main_pumpkin.png?raw=true" alt="picture" />
       </div>
    </header>
 
