--- a/Vegetable.html
+++ b/Vegetable.html
@@ -281,7 +281,7 @@
    <div class="article-body">
       <h3>Vegetables</h3>
       <div class="picture2">
-         <img src="C:\Users\Administrator\Downloads\img_vegetables_carrot.png" />
+         <img src="https://github.com/Gxuanh/Gxuanh.github.io/blob/main/img_vegetables_carrot.png?raw=true" />
          <img src="C:\Users\Administrator\Downloads\img_vegetables_corn.png" />
          <img src="C:\Users\Administrator\Downloads\img_vegetables_pepper.png" />
       </div>
