--- a/Vegetable.html
+++ b/Vegetable.html
@@ -283,7 +283,7 @@
       <div class="picture2">
          <img src="https://github.com/Gxuanh/Gxuanh.github.io/blob/main/img_vegetables_carrot.png?raw=true" />
          <img src="https://github.com/Gxuanh/Gxuanh.github.io/blob/main/img_vegetables_corn.png?raw=true" />
-         <img src="C:\Users\Administrator\Downloads\img_vegetables_pepper.png" />
+         <img src="https://github.com/Gxuanh/Gxuanh.github.io/blob/main/img_vegetables_pepper.png?raw=true" />
       </div>
    </div>
 
